# autonomous_mobile_robotics

./: .gitignore  LIDAR_QUICKSTART.md  QUICKSTART.md  QUICK_COMMANDS.md  README.md  SETUP_GUIDE.md  cleanup.sh  esp32_diffbot_controller.ino  frames_2026-02-02_19.55.52.gv
src/diffbot_bringup/: CMakeLists.txt  README.md  package.xml
src/diffbot_bringup/config/: nav2_params.yaml  slam_toolbox.yaml  ydlidar_x2.yaml
src/diffbot_bringup/launch/: diffbot_bringup.launch.py  gazebo_nav.launch.py  gazebo_sim.launch.py  gazebo_slam.launch.py  navigation.launch.py  sensors.launch.py  slam.launch.py  teleop.launch.py  view_robot.launch.py
src/diffbot_bringup/src/: esp32_bridge.py
src/diffbot_control/: CMakeLists.txt  README.md  package.xml
src/diffbot_control/config/: diffbot_control.urdf  diffbot_controllers.yaml
src/diffbot_control/launch/: diffbot_control.launch.py
src/diffbot_description/: CMakeLists.txt  README.md  TECHNICAL.md  package.xml
src/diffbot_description/launch/: display.launch.py
src/diffbot_description/rviz/: diffbot.rviz  nav2_slam.rviz
src/diffbot_description/urdf/: diffbot.urdf  diffbot_gazebo.urdf
src/diffbot_description/worlds/: diffbot_world.world
src/laptop_slam/: CMakeLists.txt  README.md  package.xml
src/laptop_slam/config/: slam_params.yaml
src/laptop_slam/launch/: laptop_slam.launch.py  teleop.launch.py
src/laptop_slam/rviz/: slam_config.rviz
src/laptop_slam/urdf/: robot.urdf
src/lidar_slam_simple/: CMakeLists.txt  README.md  package.xml
src/lidar_slam_simple/config/: slam.yaml  ydlidar.yaml
src/lidar_slam_simple/launch/: slam.launch.py
src/lidar_slam_simple/rviz/: slam.rviz
src/raspi_bringup/: CMakeLists.txt  README.md  package.xml
src/raspi_bringup/config/: ydlidar.yaml
src/raspi_bringup/esp32_firmware/: README.md  motor_control.ino
src/raspi_bringup/launch/: raspi_robot.launch.py
src/raspi_bringup/scripts/: esp32_motor_bridge.py
