<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_control</name>
  <version>0.0.0</version>
  <description>Robot control package for differential drive robot with ros2_control</description>
  <maintainer email="omgunjalmtt@gmail.com">omg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>diffbot_description</exec_depend>
  <exec_depend>ros2_control_node</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mock_components</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
