<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_slam_simple</name>
  <version>1.0.0</version>
  <description>Simple LiDAR SLAM package - connect LiDAR to laptop, visualize, and map</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- YD LiDAR driver -->
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  
  <!-- SLAM and Navigation -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  
  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  
  <!-- Teleop -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
